fixed text overlap

--- a/static/main.css
+++ b/static/main.css
@@ -1,1 +1,5 @@
-/* custom css */
+text{
+  font-family: sans-serif;
+  font-size: 11px;
+
+}
